<?xml version="1.0"?>
<package>

  <name>ros_behavior_tree_learning</name>

  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dgerod@xyz-lab.org.es">Diego Escudero</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ros_behavior_tree_learning_comms</build_depend>
  <build_depend>behavior_tree_learning</build_depend>
  <build_depend>rik_utilities</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>ros_behavior_tree_learning_comms</run_depend>
  <run_depend>behavior_tree_learning</run_depend>
  <run_depend>rik_utilities</run_depend>

</package>
